Add incoming and outgoing requests and add friend function Add delegate adapter to project Init search

--- a/app/src/main/res/layout/fragment_photo_list.xml
+++ b/app/src/main/res/layout/fragment_photo_list.xml
@@ -3,17 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/background">
+    android:layout_height="wrap_content">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_photo_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:minHeight="400dp"
-        android:padding="4dp"
+        android:paddingHorizontal="4dp"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         android:nestedScrollingEnabled="true"
+        android:clipToPadding="false"
+        android:paddingBottom="36dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
