--- a/app/src/main/res/drawable/ic_close_square.xml
+++ b/app/src/main/res/drawable/ic_close_square.xml
@@ -4,25 +4,25 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M12,8.327V15.654"
+      android:pathData="M14.396,9.595L9.604,14.387"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#130F26"
+      android:strokeColor="#200E32"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M15.667,11.99H8.333"
+      android:pathData="M14.397,14.39L9.601,9.593"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#130F26"
+      android:strokeColor="#200E32"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M16.686,2H7.314C4.048,2 2,4.312 2,7.585V16.415C2,19.688 4.038,22 7.314,22H16.686C19.962,22 22,19.688 22,16.415V7.585C22,4.312 19.962,2 16.686,2Z"
+      android:pathData="M16.334,2.75H7.665C4.644,2.75 2.75,4.889 2.75,7.916V16.084C2.75,19.111 4.635,21.25 7.665,21.25H16.333C19.365,21.25 21.25,19.111 21.25,16.084V7.916C21.25,4.889 19.365,2.75 16.334,2.75Z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
       android:fillType="evenOdd"
-      android:strokeColor="#130F26"
+      android:strokeColor="#200E32"
       android:strokeLineCap="round"/>
 </vector>
