--- a/app/src/main/res/drawable/ic_plus.xml
+++ b/app/src/main/res/drawable/ic_plus.xml
@@ -1,28 +1,28 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
-    android:viewportWidth="40"
-    android:viewportHeight="40">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M23.993,15.991L16.006,23.978"
+      android:pathData="M12,8.327V15.654"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#95AEFE"
+      android:strokeColor="#200E32"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M23.995,23.983L16.002,15.988"
+      android:pathData="M15.667,11.991H8.333"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#95AEFE"
+      android:strokeColor="#200E32"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M27.224,4.584H12.776C7.741,4.584 4.584,8.149 4.584,13.194V26.807C4.584,31.852 7.726,35.417 12.776,35.417H27.222C32.274,35.417 35.417,31.852 35.417,26.807V13.194C35.417,8.149 32.274,4.584 27.224,4.584Z"
+      android:pathData="M16.686,2H7.314C4.048,2 2,4.312 2,7.585V16.415C2,19.688 4.038,22 7.314,22H16.686C19.962,22 22,19.688 22,16.415V7.585C22,4.312 19.962,2 16.686,2Z"
       android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
       android:fillType="evenOdd"
-      android:strokeColor="#95AEFE"
+      android:strokeColor="#200E32"
       android:strokeLineCap="round"/>
 </vector>
