--- a/app/src/main/res/layout/fragment_outgoing.xml
+++ b/app/src/main/res/layout/fragment_outgoing.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_incoming"
+        android:id="@+id/rv_outgoing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
