--- a/app/src/main/res/layout/item_friend_send.xml
+++ b/app/src/main/res/layout/item_friend_send.xml
@@ -18,12 +18,13 @@
 
     <TextView
         android:id="@+id/tv_username"
-        android:layout_width="wrap_content"
+        android:layout_width="56dp"
         android:layout_height="wrap_content"
         android:textColor="@color/dark_grey"
         android:textSize="8sp"
         android:textStyle="bold"
         android:layout_marginTop="8dp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
