--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -41,7 +41,9 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:textColor="@color/black"
-        android:text="TextView"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        tools:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
