Set min size to widget

--- a/app/src/main/res/xml/photo_booth_widget_info.xml
+++ b/app/src/main/res/xml/photo_booth_widget_info.xml
@@ -3,11 +3,13 @@
     android:description="@string/app_widget_description"
     android:initialKeyguardLayout="@layout/photo_booth_widget"
     android:initialLayout="@layout/photo_booth_widget"
-    android:minWidth="128dp"
-    android:minHeight="128dp"
+    android:minWidth="180dp"
+    android:minHeight="110dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:previewLayout="@layout/photo_booth_widget"
     android:resizeMode="horizontal|vertical"
+    android:minResizeHeight="110dp"
+    android:minResizeWidth="180dp"
     android:targetCellWidth="3"
     android:targetCellHeight="2"
     android:updatePeriodMillis="2000000"
