Add history to bottom navigation and add new color to camera buttons

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,4 +29,6 @@
 
     <color name="background">#FFFFFF</color>
     <color name="border_color">#F7F8F8</color>
+
+    <color name="color_primary">#ffb69df8</color>
 </resources>
