--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,6 @@
     <style name="ShapeAppearanceOverlay.App.CornerSize10" parent="">
         <item name="cornerSize">10dp</item>
     </style>
+    
+    <style name=""
 </resources>
