--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -73,7 +73,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/image_capture_button" />
 
-    <LinearLayout
+    <!--<LinearLayout
         android:id="@+id/btn_photo_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -94,6 +94,6 @@
             android:textStyle="bold"
             android:textColor="@color/dark_grey"
             android:text="@string/photo_history"/>
-    </LinearLayout>
+    </LinearLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
