--- a/app/src/main/res/menu/top_nav_menu.xml
+++ b/app/src/main/res/menu/top_nav_menu.xml
@@ -11,6 +11,10 @@
         android:icon="@drawable/ic_camera"
         android:title="Главная" />
     <item
+        android:id="@+id/history"
+        android:icon="@drawable/ic_history"
+        android:title="История" />
+    <item
         android:id="@+id/profile"
         android:icon="@drawable/ic_profile_text"
         android:title="Профиль" />
