--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -53,6 +53,7 @@
 
         <Button
             android:id="@+id/btn_incoming"
+            style="@style/MainButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -63,6 +64,7 @@
 
         <Button
             android:id="@+id/btn_outgoing"
+            style="@style/MainButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
