--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -101,6 +101,7 @@
 
     <Button
         android:id="@+id/btn_login"
+        style="@style/MainButton"
         android:layout_width="0dp"
         android:layout_height="56dp"
         android:layout_marginHorizontal="48dp"
