--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -34,6 +34,7 @@
 
     <Button
         android:id="@+id/btn_registration"
+        style="@style/MainButton"
         android:layout_width="0dp"
         android:layout_height="56dp"
         android:layout_marginHorizontal="48dp"
@@ -49,6 +50,7 @@
 
     <Button
         android:id="@+id/btn_login"
+        style="@style/MainButton"
         android:layout_width="0dp"
         android:layout_height="56dp"
         android:layout_marginHorizontal="48dp"
