--- a/app/src/main/res/menu/top_nav_menu.xml
+++ b/app/src/main/res/menu/top_nav_menu.xml
@@ -14,8 +14,8 @@
         android:id="@+id/history"
         android:icon="@drawable/ic_history"
         android:title="История" />
-    <item
+    <!--<item
         android:id="@+id/profile"
         android:icon="@drawable/ic_profile_text"
-        android:title="Профиль" />
+        android:title="Профиль" />-->
 </menu>
