--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,5 +28,7 @@
         <item name="cornerSize">10dp</item>
     </style>
     
-    <style name=""
+    <style name="MainButton" parent="Widget.Material3.Button">
+        <item name="backgroundTint">@color/btn_main_color</item>
+    </style>
 </resources>
